update swagger docs and contract test, rubocop
